vcluster_versioned_docs/version-0.25.0/configure/vcluster-yaml/control-plane/components/backing-store/etcd/deploy.mdx
---
title: External etcd
sidebar_label: deploy
sidebar_position: 3
description: Configure an external etcd instance as the virtual cluster's backing store.
---

import ConfigReference from '../../../../../../_partials/config/controlPlane/backingStore/etcd/deploy.mdx'

import ProAdmonition from '../../../../../../_partials/admonitions/pro-admonition.mdx';


When using this backing store option, [etcd](https://etcd.io/) is deployed on the host cluster in the same namespace as the vCluster control plane pod. vCluster deploys etcd with a `StatefulSet`, `Service`, and headless `Service`.

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
```

## Customize the resources

You can customize the resources that is deployed for etcd. Here are some basic examples, but more options exist in the configuration.

### Set resource requests for the StatefulSet

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          resources:
            requests:
              cpu: 20m
              memory: 150Mi
```

### Add annotations to each etcd component

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          annotations:
            app.kubernetes.io/part-of: "etcd"
            cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
        service:
          annotations:
            app.kubernetes.io/part-of: "etcd"
        headlessService:
          annotations:
            app.kubernetes.io/part-of: "etcd"
```

### Set the security context of the StatefulSet

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          security:
            podSecurityContext:
              allowPrivilegeEscalation: false
```

## Migration options

### Migrate to embedded etcd

<ProAdmonition />

There is an option to migrate from a deployed etcd to the [embedded](/vcluster/configure/vcluster-yaml/control-plane/components/backing-store/etcd/embedded) etcd option. Replace your current backing store with this option and upgrade your virtual cluster.

```yaml title="vcluster.yaml"
controlPlane:
  backingStore:
    etcd:
      embedded:
        enabled: true
        migrateFromDeployedEtcd: true
```

Deploying with `migrateFromDeployedEtcd: true` retains the external etcd StatefulSet to perform the migration.  After a successful migration, you should see the `Successfully migrated etcd database to embedded etcd` log message in vCluster.
To remove the external etcd after migration, delete `migrateFromDeployedEtcd: true` from the `vcluster.yaml`:

```yaml title="vcluster.yaml after etcd migration"
controlPlane:
  backingStore:
    etcd:
      embedded:
        enabled: true
```

## Config reference

<ConfigReference/>

